--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "react-native-reanimated": "^2.0.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "3.0.0",
-    "react-native-sound": "0.11.0",
+    "react-native-sound": "^0.11.1",
     "react-native-svg": "^12.1.1",
     "react-native-video-processing": "^2.0.0",
     "react-redux": "^7.2.2",
